\name{ips-news}
\alias{ips-news} 
\title{News and changes to the ips (formerly: phyloch) package}
\section{VERSION 0.0.12}{
\subsection{NEW FEATURES}{
  \itemize{
  \item The new function \code{blastn} provides an interface to the command-line program blastn for nucleotide to nucleotide comparison.
  }
   \item The new function \code{combMyTree} grafts polytomies on a phylogeny.
  }
}
}
\section{VERSION 0.0.11}{
\subsection{NEW FEATURES}{
  \itemize{
  \item The new function \code{forceEqualTipHeights} corrects small rounding errors in edge lengths such that the resulting phylogeny will pass \code{ape::is.ultrametric}.
  }
}
\subsection{IMPROVED FEATURES}{
  \itemize{
  \item The new argument \code{weights} in \code{raxml} allows to assign individual weights to each column of the alignment. It corresponds to the -a flag in RAxML (see The RAxML v8.2.x Manual for details)
  }
}
}
\section{VERSION 0.0-10}{
\subsection{IMPROVED FEATURES}{
  \itemize{
  \item The new argument \code{exec} in \code{mrbayes} allows to specify the name and path of the MrBayes executable explicitly. If the executable is in the search path, \code{exec} can be missing.
  }
}
}
\section{VERSION 0.0-9}{
\subsection{IMPROVED FEATURES}{
  \itemize{
  \item \code{write.nex} (and \code{matrixBlocks}) were extended to handle standard (morphological, etc.) data in a data frame. This feature including the coding of ambiguous characters was tested successfully with MrBayes.
  }
}
\subsection{DEPRECATED FEATURES}{
   \itemize{
    \item \code{write.partioned.nex} was removed from the package; its functionality has been integrated into \code{write.nex}.
   } 
}
}
\section{VERSION 0.0-8}{
\subsection{IMPROVED FEATURES}{
   \itemize{
    \item \code{write.nex} can now handle multiple DNA sequence alignments.
    \item Argument \code{interleave} of functions \code{write.fas}, \code{write.phy}, and \code{write.nex} has been renamed to \code{block.width} for clarity.
   } 
  }