@@ -14,6 +14,7 @@ export(eoi)
 export(fixNodes)
 export(forceEqualTipHeights)
 export(gblocks)
+export(identifyEmptyCells)
 export(index2DNAbin)
 export(mafft)
 export(mafft.merge)
